--- a/WPFSendMail/MailSender/WPFMailSender.xaml
+++ b/WPFSendMail/MailSender/WPFMailSender.xaml
@@ -7,6 +7,7 @@
         xmlns:db="clr-namespace:MailSender.Lib.Data.Linq2SQL;assembly=MailSender.Lib"
         xmlns:local="clr-namespace:MailSender"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" x:Class="MailSender.WPFMailSender"
+        xmlns:ctrl="clr-namespace:MailSender.Controls"
         mc:Ignorable="d"
         Title="WpfMailSender " Height="450" Width="800" MinHeight="450" MinWidth="800">
     <DockPanel>
@@ -44,6 +45,13 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <ToolBarTray Grid.Row="0">
+                        <ToolBar Band="2" IsEnabled="False">
+                            <ctrl:ToolBar x:Name="SenderBox2" LabelText="Выбрать отправителя" 
+                                          ItemSource="{Binding Sender, Source={StaticResource DataBase}}"
+                                          SelectedValuePath="{Binding sender_id}"
+                                          cbDisplayMember="{Binding login}"
+                                          cbToolTip="{Binding email, StringFormat=:\{0\}}"/>
+                        </ToolBar>
                         <ToolBar>
                             <TextBlock Text="Выбрать отправителя"/>
                             <ComboBox x:Name="SenderBox" MinWidth="70" MaxWidth="150"
@@ -138,7 +146,7 @@
                     <GroupBox Header="Управление" Grid.Column="0">
                         <StackPanel>
                             <TextBlock Text="Выберите дату"/>
-                            <xctk:DateTimePicker x:Name="SendMailDateTimePicker"/>
+                            <xctk:TimePicker x:Name="SendMailDateTimePicker" Format="ShortTime"/>
                             <StackPanel Margin="5">
                                 <Button x:Name="SendSheduledMail"
                                     ToolTip="Отправить запланировано"
