--- a/WPFSendMail/MailSender/WPFMailSender.xaml
+++ b/WPFSendMail/MailSender/WPFMailSender.xaml
@@ -45,7 +45,7 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <ToolBarTray Grid.Row="0">
-                        <ToolBar Band="2" IsEnabled="False">
+                        <ToolBar Band="2">
                             <ctrl:ToolBar x:Name="SenderBox2" LabelText="Выбрать отправителя" 
                                           ItemSource="{Binding Sender, Source={StaticResource DataBase}}"
                                           SelectedValuePath="{Binding sender_id}"
