--- a/WPFSendMail/MailSender/App.xaml
+++ b/WPFSendMail/MailSender/App.xaml
@@ -1,13 +1,20 @@
-﻿<Application x:Class="MailSender.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+<Application x:Class="MailSender.App" 
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" ms:Ignorable="d" 
+             xmlns:ms="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="clr-namespace:MailSender"
              StartupUri="WPFMailSender.xaml">
-    <Application.Resources>
-        <!--<ResourceDictionary>
+  <Application.Resources>
+    <!--<ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Theme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>-->
-    </Application.Resources>
+    <ResourceDictionary>
+      <vm:ViewModelLocator x:Key="Locator" 
+                           d:IsDataSource="True" 
+                           xmlns:vm="clr-namespace:MailSender.ViewModel" />
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
