--- a/WPFSendMail/MailSender/WPFMailSender.xaml
+++ b/WPFSendMail/MailSender/WPFMailSender.xaml
@@ -7,9 +7,10 @@
         xmlns:db="clr-namespace:MailSender.Lib.Data.Linq2SQL;assembly=MailSender.Lib"
         xmlns:local="clr-namespace:MailSender"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" x:Class="MailSender.WPFMailSender"
-        xmlns:ctrl="clr-namespace:MailSender.Controls"
+        xmlns:ctrl="clr-namespace:MailSender.View"
         mc:Ignorable="d"
-        Title="WpfMailSender " Height="450" Width="800" MinHeight="450" MinWidth="800">
+        Title="WpfMailSender " Height="450" Width="800" MinHeight="450" MinWidth="800"
+        DataContext="{Binding MainViewModel, Source={StaticResource Locator}}">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Файл">
@@ -46,11 +47,18 @@
                     </Grid.RowDefinitions>
                     <ToolBarTray Grid.Row="0">
                         <ToolBar Band="2">
-                            <ctrl:ToolBar x:Name="SenderBox2" LabelText="Выбрать отправителя" 
-                                          ItemSource="{Binding Sender, Source={StaticResource DataBase}}"
-                                          SelectedValuePath="{Binding sender_id}"
-                                          cbDisplayMember="{Binding login}"
-                                          cbToolTip="{Binding email, StringFormat=:\{0\}}"/>
+                            <ctrl:ToolBar LabelText="Выбрать отправителя" 
+                                          ItemSource="{Binding Senders}"
+                                          SelectedItem="{Binding SelectedSender}">
+                                <ctrl:ToolBar.ItemTemplate>
+                                    <DataTemplate DataType="{x:Type db:Sender}">
+                                        <StackPanel>
+                                            <TextBlock Text="{Binding login}"/>
+                                            <TextBlock Text="{Binding email, StringFormat=:\{0\}}" Opacity="0.7"/>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </ctrl:ToolBar.ItemTemplate>
+                            </ctrl:ToolBar>
                         </ToolBar>
                         <ToolBar>
                             <TextBlock Text="Выбрать отправителя"/>
@@ -59,7 +67,7 @@
                                       SelectedIndex="0"
                                       SelectedValuePath="{Binding sender_id}">
                                 <ComboBox.ItemTemplate>
-                                    <DataTemplate>
+                                    <DataTemplate DataType="{x:Type db:Sender}">
                                         <StackPanel>
                                             <TextBlock Text="{Binding login}"/>
                                             <TextBlock 
@@ -119,6 +127,9 @@
                             <Button ToolTip="Удалить">
                                 <fa:ImageAwesome Height="18" Icon="TrashOutline"/>
                             </Button>
+                        </ToolBar>
+                        <ToolBar Band="2">
+                            <Button Content ="dsds" Command="{Binding RefreshDateCommand}"/>
                         </ToolBar>
                     </ToolBarTray>
                     <DataGrid Grid.Row="1" x:Name="RecipientsGrid"
