--- a/WPFSendMail/MailSender/View/ToolBar.xaml
+++ b/WPFSendMail/MailSender/View/ToolBar.xaml
@@ -7,7 +7,7 @@
              xmlns:local="clr-namespace:MailSender.View"
              mc:Ignorable="d" 
              d:DesignHeight="65" d:DesignWidth="250">
-    <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:ToolBar}}">
+    <Grid DataContext="{Binding MainViewModel, Source={StaticResource Locator}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition MinWidth="75" MaxWidth="150"/>
@@ -15,20 +15,27 @@
             <ColumnDefinition MinWidth="30" MaxWidth="30"/>
             <ColumnDefinition MinWidth="30" MaxWidth="30"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Text="{Binding LabelText}"/>
+        <TextBlock Grid.Column="0" Text="Выбрать отправителя"/>
         <ComboBox Grid.Column="1" MinWidth="70" MaxWidth="150"
-                ItemsSource="{Binding ItemSource}"
-                SelectedValuePath="{Binding SelectedValuePath}"
-                DisplayMemberPath="{Binding ViewPropertyPath}"
-                SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
-                ItemTemplate="{Binding ItemTemplate}"/>
-        <Button Grid.Column="2" ToolTip="Добавить" Command="{Binding AddCommand}">
+                ItemsSource="{Binding Senders}"
+                SelectedItem="{Binding SelectedSender,Mode=TwoWay}"
+                  Name="Box">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <TextBlock Text="{Binding login}"/>
+                        <TextBlock Text="{Binding email, StringFormat=:\{0\}}" Opacity="0.7"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <Button Grid.Column="2" ToolTip="Добавить" Command="{Binding AddSenderCommand}">
             <fa:ImageAwesome Height="18" Icon="Plus"/>
         </Button>
-        <Button Grid.Column="3" ToolTip="Изменить" Command="{Binding UpdateCommand}">
+        <Button Grid.Column="3" ToolTip="Изменить" Command="{Binding UpdateSenderCommand}" CommandParameter="{Binding SelectedSender}">
             <fa:ImageAwesome Height="18" Icon="Edit"/>
         </Button>
-        <Button Grid.Column="4" ToolTip="Удалить" Command="{Binding DeleteCommand}">
+        <Button Grid.Column="4" ToolTip="Удалить" Command="{Binding DeleteSenderCommand}" CommandParameter="{Binding SelectedSender}">
             <fa:ImageAwesome Height="18" Icon="TrashOutline"/>
         </Button>
     </Grid>
