--- a/WPFSendMail/MailSender/View/SenderEditorWindow.xaml
+++ b/WPFSendMail/MailSender/View/SenderEditorWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MailSender.View"
         mc:Ignorable="d"
-        Title="{Binding SenderName,StringFormat=Редактирование {0}}" 
-        MinHeight="200" MinWidth="500" MaxHeight="200" MaxWidth="500">
+        Title="{Binding Sender.SenderName,StringFormat=Редактирование {0}}" 
+        MinHeight="200" MinWidth="500" MaxHeight="200" MaxWidth="500"
+        DataContext="{Binding SenderEditorVM,Source={StaticResource Locator}}">
     <Grid Margin="15,10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -19,16 +20,16 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="0" Grid.Row="0" Text="Логин"/>
-        <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding login}"/>
+        <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Sender.login}"/>
         <TextBlock Grid.Column="0" Grid.Row="1" Text="Пароль"/>
-        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding password}"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Sender.password}"/>
         <TextBlock Grid.Column="0" Grid.Row="2" Text="Email"/>
-        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding email}"/>
+        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding UserPassword}"/>
         <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal"
                     HorizontalAlignment="Center" VerticalAlignment="Top"
                     Margin="0,15">
-            <Button Margin="5,0" Padding="14" Content="Сохранить" Click="OnSaveButton"/>
-            <Button Margin="5,0" Padding="14" Content="Отмена" Click="OnCancelButton"/>
+            <Button Margin="5,0" Padding="14" Content="Сохранить" Command="{Binding SaveCommand}"/>
+            <Button Margin="5,0" Padding="14" Content="Отмена" Command="{Binding CancelCommand}"/>
         </StackPanel>
     </Grid>
 </Window>
