--- a/WPFSendMail/MailSender/View/SenderEditorWindow.xaml
+++ b/WPFSendMail/MailSender/View/SenderEditorWindow.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MailSender.View"
         mc:Ignorable="d"
-        Title="{Binding Sender.SenderName,StringFormat=Редактирование {0}}" 
+        Title="Редактирование" 
         MinHeight="200" MinWidth="500" MaxHeight="200" MaxWidth="500"
-        DataContext="{Binding SenderEditorVM,Source={StaticResource Locator}}">
+        Width="500" Height="200"
+        d:DataContext="{d:DesignData viewModel:SenderEditorVM}">
     <Grid Margin="15,10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -22,9 +23,9 @@
         <TextBlock Grid.Column="0" Grid.Row="0" Text="Логин"/>
         <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Sender.login}"/>
         <TextBlock Grid.Column="0" Grid.Row="1" Text="Пароль"/>
-        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Sender.password}"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding UserPassword}"/>
         <TextBlock Grid.Column="0" Grid.Row="2" Text="Email"/>
-        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding UserPassword}"/>
+        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Sender.email}"/>
         <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal"
                     HorizontalAlignment="Center" VerticalAlignment="Top"
                     Margin="0,15">
