--- a/WPFSendMail/MailSender/View/ServerEditorWindow.xaml
+++ b/WPFSendMail/MailSender/View/ServerEditorWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="MailSender.View.SenderEditorWindow"
+﻿<Window x:Class="MailSender.View.ServerEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MailSender.View"
         mc:Ignorable="d"
-        Title="{Binding Entity.Name,StringFormat=Редактирование {0}}" 
+        Title="{Binding Entity.Address,StringFormat=Редактирование {0}}" 
         MinHeight="200" MinWidth="500" MaxHeight="200" MaxWidth="500"
         Width="500" Height="200"
-        d:DataContext="{d:DesignData viewModel:SenderEditorVM}">
+        d:DataContext="{d:DesignData viewModel:ServerEditorVM}">
     <Grid Margin="15,10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -20,12 +20,10 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="Логин"/>
-        <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Entity.Login}"/>
-        <TextBlock Grid.Column="0" Grid.Row="1" Text="Пароль"/>
-        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding UserPassword}"/>
-        <TextBlock Grid.Column="0" Grid.Row="2" Text="Email"/>
-        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Entity.Email}"/>
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="Адрес"/>
+        <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Entity.Address}"/>
+        <TextBlock Grid.Column="0" Grid.Row="1" Text="Порт"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Entity.Port}"/>
         <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal"
                     HorizontalAlignment="Center" VerticalAlignment="Top"
                     Margin="0,15">
